# box-tracker

./: .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc  README.md  docker-compose.yml  eslint.config.mjs  nx.json  package.json  postcss.config.js  stylelint.config.mjs  tsconfig.base.json  tsconfig.json
projects/backend/: alembic.ini  main.py  package.json  project.json  pyproject.toml  pytest.ini
projects/backend/api/: auth.py  location.py  space.py  user.py
projects/backend/db/: session.py
projects/backend/db/migrations/: env.py
projects/backend/db/migrations/versions/: 2c6dbfd575ce_initial_db_state.py  32d2f21d7565_rename_cognito_id_to_auth_id.py  4b0083c023f4_adds_space_user_join_table.py  646932f6e61b_adds_space_user_join_table_redux.py  (+1 more)
projects/backend/db/seeds/: all.py  locations.py  spaces.py  users.py
projects/backend/helpers/: permissions_matrix.py  profanity.py  profanity_whitelist.py
projects/backend/mocks/: auth.py  cognito.py
projects/backend/models/: location.py  space.py  space_user.py  user.py
projects/backend/prisma/: schema.prisma  seed.ts
projects/backend/prisma/seeds/: user.seed.ts
projects/backend/schemas/: location.py  space.py  user.py
projects/backend/services/: cognito.py  permissions.py  profanity.py
projects/backend/src/: app.module.ts  main.ts
projects/backend/src/auth/: auth.module.ts  clerk-auth.guard.ts  clerk.service.ts  clerk.strategy.ts
projects/backend/src/v1/: v1.module.ts
projects/backend/tests/: location_test.py  space_test.py  user_test.py
projects/backend/types/: express.d.ts
(+376 files in other folders)
