[project]
name = "backend"
version = "0.0.1"
description = "The FastAPI backend for box-tracker"
authors = [
    {name = "Alex Foxleigh",email = "alex@alexfoxleigh.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "better-profanity (>=0.7.0,<0.8.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
httpx = "^0.28.1"
